Install express as a dependency and create an index.js.#1

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "npm-run-all": "4.0.2",
     "stylelint": "7.10.1",
     "stylelint-config-standard": "16.0.0"
+  },
+  "dependencies": {
+    "express": "^4.15.3"
   }
 }
